[package]
name = "signature-dyn"
version = "0.2.2"
edition = "2024"

[features]
async = ["dep:async-trait"]
ed25519-dalek = ["dep:ed25519-dalek", "dep:signature"]
ed448-goldilocks = ["dep:ed448-goldilocks", "dep:signature"]
k256 = ["dep:k256", "dep:signature"]
p256 = ["dep:p256", "dep:signature"]
p384 = ["dep:p384", "dep:signature"]
p521 = ["dep:p521", "dep:signature"]
pkcs8 = ["ed25519-dalek?/pem", "dep:pkcs8"]
random = ["ed25519-dalek?/rand_core", "dep:rand"]
serde = ["dep:serde"]
signature = ["dep:signature"]
ssi-multicodec = ["dep:ssi-multicodec"]

[dependencies]
async-trait = { version = "0.1.89", optional = true }
ed25519-dalek = { version = "3.0.0-rc.0", optional = true }
ed448-goldilocks = { version = "0.14.0-pre.13", optional = true }
k256 = { version = "0.14.0-rc.11", optional = true }
p256 = { version = "0.14.0-rc.11", optional = true }
p384 = { version = "0.14.0-rc.11", optional = true }
p521 = { version = "0.14.0-rc.11", optional = true, features = ["ecdsa"] }
pkcs8 = { package = "pkcs8", version = "0.11.0", optional = true }
rand = { version = "0.10.1", optional = true, features = ["sys_rng"] }
serde = { version = "1.0.225", optional = true, features = ["derive"] }
signature = { package = "signature", version = "3.0", optional = true }
ssi-multicodec = { version = "0.2.0", optional = true }

[dev-dependencies]
ed25519-dalek = { version = "3.0.0-rc.0", features = ["rand_core"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
